# github-cli-issue-demo

./: .gitignore  LICENSE  README.md  config.json  create_issues.py  main.py  pyproject.toml  tasks.csv
data/: labels.json  tasks.csv
docs/: usage.md
src/bulk_issue_importer/: application.py  config.py  config_loader.py  constants.py  logging_config.py
src/bulk_issue_importer/clients/: github_client.py
src/bulk_issue_importer/core/: command_runner.py
src/bulk_issue_importer/exceptions/: application_exception.py  github_exceptions.py  validation_exceptions.py
src/bulk_issue_importer/managers/: issue_manager.py  label_manager.py  project_manager.py
src/bulk_issue_importer/models/: command_result.py  config.py  import_result.py  issue.py
src/bulk_issue_importer/readers/: csv_reader.py
tests/: test.py  test_command_runner.py  test_config.py  test_csv_reader.py  test_github_client.py  test_issue.py  test_issue_manager.py
