[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bulk-issue-importer"
version = "0.1.0"
description = "Bulk GitHub Issue Importer using GitHub CLI"
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "sudo-its-me" }
]

dependencies = [
    "pytest>=8.0.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]